# IOTv2

AirQuality/: AirQuality.ino
Bluetooth/: Bluetooth.ino
Button Matrix/Buttons/: Buttons.ino
ButtonMatrix/Buttons/: Buttons.ino
ESP-API/: .env  pyproject.toml  requirements.txt  test.py
ESP-API/esp-client/: esp-client.ino
ESP-API/src/: main.py
ESP-API/src/database/: config.py  database.py  engine.py
ESP-API/src/device/: models.py  router.py  schemas.py
H-bridge/: H-bridge.ino
LedCube/: LedCube.ino
MoveAlgorithm/: MoveAlgorithm.ino
esp_api_mqtt_leds/: client-sample.py  esp_api_mqtt_leds.ino
esp_api_mqtt_leds/esp_mqtt/: Config.h
esp_api_mqtt_leds/esp_mqtt/esp_mqtt_leds/: Config.h  esp_mqtt_leds.ino  leds.h
esp_api_mqtt_leds/server/: .env  Dockerfile  README.md  local.db  test.py
esp_api_mqtt_leds/server/src/: database.py  main.py
esp_api_mqtt_leds/server/src/auth/: exceptions.py  model.py  route.py  router.py  scheme.py
esp_api_mqtt_leds/server/src/device/: model.py  router.py  scheme.py
esp_api_mqtt_leds/server/src/leds_color/: router.py  scheme.py
esp_api_mqtt_leds/server/src/pixels/: router.py
esp_api_mqtt_leds/server/src/pixels_colors/: model.py  router.py
esp_api_mqtt_leds/server/src/user/: model.py  router.py
